--- a/.github/workflows/cron-update.yml
+++ b/.github/workflows/cron-update.yml
@@ -65,6 +65,7 @@ jobs:
       env:
         DUPLICATI_RELEASE: ${{ steps.variables.outputs.DUPLICATI_RELEASE }}
       run: |
+        DUPLICATI_RELEASE=$(echo $DUPLICATI_RELEASE | cut -c 2-8)
         echo "::set-output name=OLD_MD5::$(md5sum README.md | awk '{ print $1 }')"
         OVERLAY_VERSION=$(curl -sX GET "https://raw.githubusercontent.com/hydazz/docker-baseimage-mono/main/version_info.json" | jq -r .overlay_version)
         MONO_VERSION=$(cat package_versions.txt | grep -E "mono.*?-" | sed -n 1p | cut -c 6- | sed -E 's/-r.*//g')
