--- a/.github/workflows/manual-update.yml
+++ b/.github/workflows/manual-update.yml
@@ -87,32 +87,16 @@ jobs:
         printf '{\n"overlay_version": "'${OVERLAY_VERSION}'",\n"mono_version": "'${MONO_VERSION}'",\n"duplicati_release": "'${DUPLICATI_RELEASE}'"\n}\n' >version_info.json
         echo "::set-output name=NEW_MD5::$(md5sum README.md | awk '{ print $1 }')"
 
-    - name: Stage README.md Changes
-      if: steps.readme.outputs.OLD_MD5 != steps.readme.outputs.NEW_MD5
-      id: push_readme
-      run: |
-        git add README.md
-        git commit -m 'Bot Updating README' README.md
-        git add version_info.json
-        git commit -m 'Bot Updating Version Info' version_info.json
-        echo "::set-output name=COMMIT::1"
-
-    - name: Stage package_versions.txt Changes
-      if: steps.packages.outputs.OLD_MD5 != steps.packages.outputs.NEW_MD5
-      id: push_packageversions
-      run: |
-        git add package_versions.txt
-        git commit -m 'Bot Updating Package Versions' package_versions.txt
-        echo "::set-output name=COMMIT::1"
-
-    - name: Push Changes To Github
-      if: steps.push_packageversions.outputs.COMMIT == 1 || steps.push_readme.outputs.COMMIT == 1
+    - name: Commit And Push Changes To Github
+      if: steps.readme.outputs.OLD_MD5 != steps.readme.outputs.NEW_MD5 || steps.packages.outputs.OLD_MD5 != steps.packages.outputs.NEW_MD5
       env:
         GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
         GIT_REPO: ${{ steps.variables.outputs.GIT_REPO }}
         GIT_BRANCH: ${{ steps.variables.outputs.GIT_BRANCH }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        git add -A
+        git commit -m 'Bot Updating Files'
         git push https://"$GIT_USER":"$GITHUB_TOKEN"@github.com/"$GIT_USER"/"$GIT_REPO".git $GIT_BRANCH
 
     - name: Tag And Push Docker Image
