fixed mono versioning

--- a/.github/workflows/manual-update.yml
+++ b/.github/workflows/manual-update.yml
@@ -75,7 +75,7 @@ jobs:
         DUPLICATI_RELEASE=$(echo $DUPLICATI_RELEASE | cut -c 2-8)
         echo "::set-output name=OLD_MD5::$(md5sum README.md | awk '{ print $1 }')"
         OVERLAY_VERSION=$(curl -sX GET "https://raw.githubusercontent.com/hydazz/docker-baseimage-mono/main/version_info.json" | jq -r .overlay_version)
-        MONO_VERSION=$(cat package_versions.txt | grep -E "mono.*?-" | sed -n 1p | cut -c 6- | sed -E 's/-r.*//g')
+        MONO_VERSION=$(cat package_versions.txt | grep -E "mono-runtime.*?-" | sed -n 1p | cut -c 14- | sed -E 's/-r.*//g')
         OLD_OVERLAY_VERSION=$(cat version_info.json | jq -r .overlay_version)
         OLD_MONO_VERSION=$(cat version_info.json | jq -r .mono_version)
         OLD_DUPLICATI_RELEASE=$(cat version_info.json | jq -r .duplicati_release)
