--- a/.github/workflows/cron-update.yml
+++ b/.github/workflows/cron-update.yml
@@ -77,7 +77,7 @@ jobs:
           -e "s/${OLD_MONO_VERSION}/${MONO_VERSION}/g" \
           -e "s/${OLD_DUPLICATI_RELEASE}/${DUPLICATI_RELEASE}/g" \
           README.md
-        printf '{\n"overlay_version": "'${OVERLAY_VERSION}'",\n"mono_version": "'${MONO_VERSION}'",\n"duplicati_release": "'${DUPLICATI_RELEASE}'"\n}\n' >version_info.json
+        printf '{\n"overlay_version": "'${OVERLAY_VERSION}'",\n"mono_version": "'${MONO_VERSION}'",\n"duplicati_release": "'${DUPLICATI_RELEASE}'"\n}' >version_info.json
         echo "::set-output name=NEW_MD5::$(md5sum README.md | awk '{ print $1 }')"
 
     - name: Commit And Push Changes To Github
