--- a/.github/workflows/manual-update.yml
+++ b/.github/workflows/manual-update.yml
@@ -6,97 +6,97 @@ on:
     branches:
       - main
     paths:
-      - '**/Dockerfile'
-      - 'root/**'
+      - "**/Dockerfile"
+      - "root/**"
 
 jobs:
   amd64:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set Enviroment Variables
-      id: variables
-      env:
-        GIT_USER: hydazz
-        GIT_REPO: docker-duplicati
-        GIT_BRANCH: main
-        DOCKERHUB_IMAGE: vcxpz/duplicati
-        DOCKERIMAGE_TAG: latest
-      run: |
-        echo "::set-output name=GIT_USER::$GIT_USER"
-        echo "::set-output name=GIT_REPO::$GIT_REPO"
-        echo "::set-output name=GIT_BRANCH::$GIT_BRANCH"
-        echo "::set-output name=DOCKERHUB_IMAGE::$DOCKERHUB_IMAGE"
-        echo "::set-output name=DOCKERIMAGE_TAG::$DOCKERIMAGE_TAG"
-        DUPLICATI_RELEASE=$(curl -sX GET "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r 'first(.[] | select(.tag_name | contains("beta"))) | .tag_name')
-        echo "::set-output name=VERSION::$DUPLICATI_RELEASE"
-        echo "::set-output name=DUPLICATI_RELEASE::$DUPLICATI_RELEASE"
-        echo "::set-output name=DUPLICATI_URL::$(curl -s https://api.github.com/repos/duplicati/duplicati/releases/tags/"${DUPLICATI_RELEASE}" | jq -r '.assets[].browser_download_url' | grep zip | grep -v signatures)"
+      - name: Set Enviroment Variables
+        id: variables
+        env:
+          GIT_USER: hydazz
+          GIT_REPO: docker-duplicati
+          GIT_BRANCH: main
+          DOCKERHUB_IMAGE: vcxpz/duplicati
+          DOCKERIMAGE_TAG: latest
+        run: |
+          echo "::set-output name=GIT_USER::$GIT_USER"
+          echo "::set-output name=GIT_REPO::$GIT_REPO"
+          echo "::set-output name=GIT_BRANCH::$GIT_BRANCH"
+          echo "::set-output name=DOCKERHUB_IMAGE::$DOCKERHUB_IMAGE"
+          echo "::set-output name=DOCKERIMAGE_TAG::$DOCKERIMAGE_TAG"
+          DUPLICATI_RELEASE=$(curl -sX GET "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r 'first(.[] | select(.tag_name | contains("beta"))) | .tag_name')
+          echo "::set-output name=VERSION::$DUPLICATI_RELEASE"
+          echo "::set-output name=DUPLICATI_RELEASE::$DUPLICATI_RELEASE"
+          echo "::set-output name=DUPLICATI_URL::$(curl -s https://api.github.com/repos/duplicati/duplicati/releases/tags/"${DUPLICATI_RELEASE}" | jq -r '.assets[].browser_download_url' | grep zip | grep -v signatures)"
 
-    - name: Docker Login
-      env:
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        echo $DOCKER_PASSWORD | docker login -u vcxpz --password-stdin
+      - name: Docker Login
+        env:
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          echo $DOCKER_PASSWORD | docker login -u vcxpz --password-stdin
 
-    - name: Github Login
-      env:
-        GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
-      run: |
-        git config --global user.email "alexanderhyde@icloud.com"
-        git config --global user.name "$GIT_USER"
+      - name: Github Login
+        env:
+          GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
+        run: |
+          git config --global user.email "alexanderhyde@icloud.com"
+          git config --global user.name "$GIT_USER"
 
-    - name: Build The Docker Image
-      env:
-        VERSION: ${{ steps.variables.outputs.VERSION }}
-        DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
-        DUPLICATI_URL: ${{ steps.variables.outputs.DUPLICATI_URL }}
-      run: |
-        docker build --no-cache --pull . --file Dockerfile --build-arg DUPLICATI_URL="$DUPLICATI_URL" --build-arg VERSION="$VERSION" --build-arg BUILD_DATE="$(date +%Y-%m-%d)" --tag "$DOCKERHUB_IMAGE":cibuild
+      - name: Build The Docker Image
+        env:
+          VERSION: ${{ steps.variables.outputs.VERSION }}
+          DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
+          DUPLICATI_URL: ${{ steps.variables.outputs.DUPLICATI_URL }}
+        run: |
+          docker build --no-cache --pull . --file Dockerfile --build-arg DUPLICATI_URL="$DUPLICATI_URL" --build-arg VERSION="$VERSION" --build-arg BUILD_DATE="$(date +%Y-%m-%d)" --tag "$DOCKERHUB_IMAGE":cibuild
 
-    - name: Get New Package Versions From Image
-      id: packages
-      env:
-        DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
-      run: |
-        echo "::set-output name=OLD_MD5::$(md5sum package_versions.txt | awk '{ print $1 }')"
-        docker run --rm --entrypoint '/bin/sh' -v "$PWD":/tmp "$DOCKERHUB_IMAGE":cibuild -c '\
-          apk info -v | sort >/tmp/package_versions.txt'
-        echo "::set-output name=NEW_MD5::$(md5sum package_versions.txt | awk '{ print $1 }')"
+      - name: Get New Package Versions From Image
+        id: packages
+        env:
+          DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
+        run: |
+          echo "::set-output name=OLD_MD5::$(md5sum package_versions.txt | awk '{ print $1 }')"
+          docker run --rm --entrypoint '/bin/sh' -v "$PWD":/tmp "$DOCKERHUB_IMAGE":cibuild -c '\
+            apk info -v | sort >/tmp/package_versions.txt'
+          echo "::set-output name=NEW_MD5::$(md5sum package_versions.txt | awk '{ print $1 }')"
 
-    - name: Update README.md
-      id: readme
-      env:
-        DUPLICATI_RELEASE: ${{ steps.variables.outputs.DUPLICATI_RELEASE }}
-      run: |
-        echo "::set-output name=OLD_MD5::$(md5sum README.md | awk '{ print $1 }')"
-        chmod +x update_version_info.sh && ./update_version_info.sh
-        echo "::set-output name=NEW_MD5::$(md5sum README.md | awk '{ print $1 }')"
+      - name: Update README.md
+        id: readme
+        env:
+          DUPLICATI_RELEASE: ${{ steps.variables.outputs.DUPLICATI_RELEASE }}
+        run: |
+          echo "::set-output name=OLD_MD5::$(md5sum README.md | awk '{ print $1 }')"
+          chmod +x update_version_info.sh && ./update_version_info.sh
+          echo "::set-output name=NEW_MD5::$(md5sum README.md | awk '{ print $1 }')"
 
-    - name: Commit And Push Changes To Github
-      if: steps.readme.outputs.OLD_MD5 != steps.readme.outputs.NEW_MD5 || steps.packages.outputs.OLD_MD5 != steps.packages.outputs.NEW_MD5
-      env:
-        GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
-        GIT_REPO: ${{ steps.variables.outputs.GIT_REPO }}
-        GIT_BRANCH: ${{ steps.variables.outputs.GIT_BRANCH }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git add -A
-        git commit -m 'Bot Updating Files'
-        git push https://"$GIT_USER":"$GITHUB_TOKEN"@github.com/"$GIT_USER"/"$GIT_REPO".git $GIT_BRANCH
+      - name: Commit And Push Changes To Github
+        if: steps.readme.outputs.OLD_MD5 != steps.readme.outputs.NEW_MD5 || steps.packages.outputs.OLD_MD5 != steps.packages.outputs.NEW_MD5
+        env:
+          GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
+          GIT_REPO: ${{ steps.variables.outputs.GIT_REPO }}
+          GIT_BRANCH: ${{ steps.variables.outputs.GIT_BRANCH }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git add -A
+          git commit -m 'Bot Updating Files'
+          git push https://"$GIT_USER":"$GITHUB_TOKEN"@github.com/"$GIT_USER"/"$GIT_REPO".git $GIT_BRANCH
 
-    - name: Tag And Push Docker Image
-      env:
-        DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
-        DOCKERIMAGE_TAG: ${{ steps.variables.outputs.DOCKERIMAGE_TAG }}
-      run: |
-        docker tag "$DOCKERHUB_IMAGE":cibuild "$DOCKERHUB_IMAGE":"$DOCKERIMAGE_TAG"
-        docker push "$DOCKERHUB_IMAGE":"$DOCKERIMAGE_TAG"
+      - name: Tag And Push Docker Image
+        env:
+          DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
+          DOCKERIMAGE_TAG: ${{ steps.variables.outputs.DOCKERIMAGE_TAG }}
+        run: |
+          docker tag "$DOCKERHUB_IMAGE":cibuild "$DOCKERHUB_IMAGE":"$DOCKERIMAGE_TAG"
+          docker push "$DOCKERHUB_IMAGE":"$DOCKERIMAGE_TAG"
 
-    - name: Push README.md To Docker Hub
-      uses: peter-evans/dockerhub-description@v2
-      with:
-        username: vcxpz
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
+      - name: Push README.md To Docker Hub
+        uses: peter-evans/dockerhub-description@v2
+        with:
+          username: vcxpz
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
