--- a/.github/workflows/manual-update.yml
+++ b/.github/workflows/manual-update.yml
@@ -18,19 +18,12 @@ jobs:
       - name: Set Enviroment Variables
         id: variables
         env:
-          GIT_USER: hydazz
-          GIT_REPO: docker-duplicati
-          GIT_BRANCH: main
           DOCKERHUB_IMAGE: vcxpz/duplicati
           DOCKERIMAGE_TAG: latest
         run: |
-          echo "::set-output name=GIT_USER::$GIT_USER"
-          echo "::set-output name=GIT_REPO::$GIT_REPO"
-          echo "::set-output name=GIT_BRANCH::$GIT_BRANCH"
           echo "::set-output name=DOCKERHUB_IMAGE::$DOCKERHUB_IMAGE"
           echo "::set-output name=DOCKERIMAGE_TAG::$DOCKERIMAGE_TAG"
           DUPLICATI_RELEASE=$(curl -sX GET "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r 'first(.[] | select(.tag_name | contains("beta"))) | .tag_name')
-          echo "::set-output name=VERSION::$DUPLICATI_RELEASE"
           echo "::set-output name=DUPLICATI_RELEASE::$DUPLICATI_RELEASE"
           echo "::set-output name=DUPLICATI_URL::$(curl -s https://api.github.com/repos/duplicati/duplicati/releases/tags/"${DUPLICATI_RELEASE}" | jq -r '.assets[].browser_download_url' | grep zip | grep -v signatures)"
 
@@ -45,7 +38,7 @@ jobs:
           GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
         run: |
           git config --global user.email "alexanderhyde@icloud.com"
-          git config --global user.name "$GIT_USER"
+          git config --global user.name "hydazz"
 
       - name: Build The Docker Image
         env:
@@ -76,15 +69,10 @@ jobs:
 
       - name: Commit And Push Changes To Github
         if: steps.readme.outputs.OLD_MD5 != steps.readme.outputs.NEW_MD5 || steps.packages.outputs.OLD_MD5 != steps.packages.outputs.NEW_MD5
-        env:
-          GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
-          GIT_REPO: ${{ steps.variables.outputs.GIT_REPO }}
-          GIT_BRANCH: ${{ steps.variables.outputs.GIT_BRANCH }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add -A
           git commit -m 'Bot Updating Files'
-          git push https://"$GIT_USER":"$GITHUB_TOKEN"@github.com/"$GIT_USER"/"$GIT_REPO".git $GIT_BRANCH
+          git push
 
       - name: Tag And Push Docker Image
         env:
