--- a/.github/workflows/auto-builder.yml
+++ b/.github/workflows/auto-builder.yml
@@ -2,7 +2,10 @@ name: Auto Builder CI
 
 on:
   schedule:
-    - cron: "10 0 * * 0"
+    - cron: "15 0 * * 0"
+  release:
+    types:
+      - released
 
 jobs:
   latest:
@@ -13,74 +16,71 @@ jobs:
       - name: Set Enviroment Variables
         id: variables
         env:
-          DOCKERHUB_IMAGE: vcxpz/duplicati
+          DOCKERHUB_USER: vcxpz
+          DOCKERHUB_IMAGE: duplicati
           DOCKERIMAGE_TAG: latest
         run: |
-          echo "::set-output name=DOCKERHUB_IMAGE::$DOCKERHUB_IMAGE"
-          echo "::set-output name=DOCKERIMAGE_TAG::$DOCKERIMAGE_TAG"
-          DUPLICATI_RELEASE=$(curl -sX GET "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r 'first(.[] | select(.tag_name | contains("beta"))) | .tag_name')
-          echo "::set-output name=DUPLICATI_RELEASE::$DUPLICATI_RELEASE"
-          echo "::set-output name=DUPLICATI_URL::$(curl -s https://api.github.com/repos/duplicati/duplicati/releases/tags/"${DUPLICATI_RELEASE}" | jq -r '.assets[].browser_download_url' | grep zip | grep -v signatures)"
+          echo "DOCKERHUB_IMAGE=${DOCKERHUB_IMAGE}" >>$GITHUB_ENV
+          echo "DOCKERHUB_USER=${DOCKERHUB_USER}" >>$GITHUB_ENV
+          echo "DOCKERIMAGE_TAG=${DOCKERIMAGE_TAG}" >>$GITHUB_ENV
+          VERSION=$(curl -sX GET "https://api.github.com/repos/hydazz/docker-${DOCKERHUB_IMAGE}/releases/latest" | jq -r .tag_name)"
+          echo "::set-output name=VERSION::$(echo ${VERSION} | cut -c 2-8)"
+          echo "::set-output name=DUPLICATI_URL::$(curl -s https://api.github.com/repos/duplicati/duplicati/releases/tags/"${VERSION}" | jq -r '.assets[].browser_download_url' | grep zip | grep -v signatures)"
+          echo "::set-output name=USER_IMAGE::${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}"
 
       - name: Docker Login
         env:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          echo $DOCKER_PASSWORD | docker login -u vcxpz --password-stdin
+          echo ${DOCKER_PASSWORD} | docker login -u ${DOCKERHUB_USER} --password-stdin
 
       - name: Github Login
-        env:
-          GIT_USER: ${{ steps.variables.outputs.GIT_USER }}
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
 
       - name: Build The Docker Image
         env:
-          VERSION: ${{ steps.variables.outputs.DUPLICATI_RELEASE }}
-          DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
+          VERSION: ${{ steps.variables.outputs.VERSION }}
           DUPLICATI_URL: ${{ steps.variables.outputs.DUPLICATI_URL }}
         run: |
-          docker build --no-cache --pull . --file Dockerfile --build-arg DUPLICATI_URL="$DUPLICATI_URL" --build-arg DUPLICATI_RELEASE="$DUPLICATI_RELEASE" --build-arg BUILD_DATE="$(date +%Y-%m-%d)" --tag "$DOCKERHUB_IMAGE":cibuild
+          docker build --no-cache --pull . --file Dockerfile --build-arg DUPLICATI_URL="$DUPLICATI_URL" --build-arg VERSION="${VERSION}" --build-arg BUILD_DATE="$(date +%Y-%m-%d)" --tag ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:cibuild
 
       - name: Get New Package Versions From Image
         id: packages
-        env:
-          DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
         run: |
           echo "::set-output name=OLD_MD5::$(md5sum package_versions.txt | awk '{ print $1 }')"
-          docker run --rm --entrypoint '/bin/sh' -v "$PWD":/tmp "$DOCKERHUB_IMAGE":cibuild -c '\
+          docker run --rm --entrypoint '/bin/sh' -v "$PWD":/tmp ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:cibuild -c '\
             apk info -v | sort >/tmp/package_versions.txt'
           echo "::set-output name=NEW_MD5::$(md5sum package_versions.txt | awk '{ print $1 }')"
 
       - name: Update README.md
-        id: readme
         env:
-          DUPLICATI_RELEASE: ${{ steps.variables.outputs.DUPLICATI_RELEASE }}
+          DUPLICATI_RELEASE: ${{ steps.variables.outputs.VERSION }}
+        id: readme
         run: |
           echo "::set-output name=OLD_MD5::$(md5sum README.md | awk '{ print $1 }')"
           chmod +x update_version_info.sh && ./update_version_info.sh
           echo "::set-output name=NEW_MD5::$(md5sum README.md | awk '{ print $1 }')"
 
       - name: Commit And Push Changes To Github
-        if: steps.readme.outputs.OLD_MD5 != steps.readme.outputs.NEW_MD5 || steps.packages.outputs.OLD_MD5 != steps.packages.outputs.NEW_MD5
         run: |
           git add -A
-          git commit -m 'Bot Updating Files'
-          git push
+          git commit -m 'Bot Updating Files' || echo "No Changes"
+          git push || echo "No Changes"
 
       - name: Tag And Push Docker Image
-        if: steps.readme.outputs.OLD_MD5 != steps.readme.outputs.NEW_MD5 || steps.packages.outputs.OLD_MD5 != steps.packages.outputs.NEW_MD5
         env:
-          DOCKERHUB_IMAGE: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
-          DOCKERIMAGE_TAG: ${{ steps.variables.outputs.DOCKERIMAGE_TAG }}
+          VERSION: ${{ steps.variables.outputs.VERSION }}
         run: |
-          docker tag "$DOCKERHUB_IMAGE":cibuild "$DOCKERHUB_IMAGE":"$DOCKERIMAGE_TAG"
-          docker push "$DOCKERHUB_IMAGE":"$DOCKERIMAGE_TAG"
+          docker tag ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:cibuild ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:${DOCKERIMAGE_TAG}
+          docker tag ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:cibuild ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:${VERSION}
+          docker push ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:${DOCKERIMAGE_TAG}
+          docker push ${DOCKERHUB_USER}/${DOCKERHUB_IMAGE}:${VERSION}
 
       - name: Push README.md To Docker Hub
         uses: peter-evans/dockerhub-description@v2
         with:
           username: vcxpz
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.variables.outputs.DOCKERHUB_IMAGE }}
+          repository: ${{ steps.variables.outputs.USER_IMAGE }}
