--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -30,7 +30,7 @@ jobs:
                "tag_name": "'$VERSION'",
                "target_commitish": "'$main'",
                "name": "'$VERSION'",
-               "body": "Upgrading AMP '$OLD_VERSION' to '$VERSION'",
+               "body": "Upgrading Duplicati '$OLD_VERSION' to '$VERSION'",
                "draft": false,
                "prerelease": false
           }' >releasebody.json
