--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -22,7 +22,7 @@ TEST_SEARCH='\[services.d\] done.'
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
 RELEASE_SCHEDULE='10 0 * * 1-6'
-RELEASE_VERSION='\[services.d\] done.'
+RELEASE_VERSION_COMMAND='\[services.d\] done.'
 
 # ~~~~~~~~~~~~~~~~~~~~~~~
 # README.md
