--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -22,10 +22,4 @@ TEST_SEARCH='\[services.d\] done.'
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
 RELEASE_SCHEDULE='10 0 * * 1-6'
-RELEASE_VERSION_COMMAND='\[services.d\] done.'
-
-# ~~~~~~~~~~~~~~~~~~~~~~~
-# README.md
-# ~~~~~~~~~~~~~~~~~~~~~~~
-
-
+RELEASE_VERSION_COMMAND='$(curl -sX GET "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r \x27first(.[] | select(.tag_name | contains("beta"))) | .tag_name\x27)'
