--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -23,4 +23,5 @@ TEST_SEARCH=''
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
 RELEASE_SCHEDULE='20 0 * * 1-6'
+BEAUTY_NAME='Duplicati'
 RELEASE_VERSION_COMMAND='$(curl -sX GET "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r \x27first(.[] | select(.tag_name | contains("beta"))) | .tag_name\x27)'
