change -sX GET t- -sL, warp jq

--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -26,4 +26,5 @@ IMAGES=''
 
 RELEASE_SCHEDULE='20 0 * * 1-6'
 BEAUTY_NAME='Duplicati'
-RELEASE_VERSION_COMMAND='$(curl -sX GET "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r \x27first(.[] | select(.tag_name | contains("beta"))) | .tag_name\x27)'
+# apostrophe needs be replaced by '\x27'
+RELEASE_VERSION_COMMAND='$(curl -sL "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r \x27first(.[] | select(.tag_name | contains("beta"))) | .tag_name\x27)'
