--- a/.github/workflows/auto-builder.yml
+++ b/.github/workflows/auto-builder.yml
@@ -43,8 +43,8 @@ jobs:
             --platform=linux/amd64,linux/arm64 \
             --output "type=image,push=true" \
             --build-arg BUILD_DATE="$(date +%Y-%m-%d)" \
-            --build-arg VERSION=$(curl -sX GET "https://api.github.com/repos/hydazz/docker-duplicati/releases/latest" | jq -r .tag_name) \
-            --tag vcxpz/duplicati:$(curl -sX GET "https://api.github.com/repos/hydazz/docker-duplicati/releases/latest" | jq -r .tag_name) \
+            --build-arg VERSION=$(curl -sL "https://api.github.com/repos/hydazz/docker-duplicati/releases/latest" | jq -r '.tag_name') \
+            --tag vcxpz/duplicati:$(curl -sL "https://api.github.com/repos/hydazz/docker-duplicati/releases/latest" | jq -r '.tag_name') \
             --tag vcxpz/duplicati:latest \
             --file Dockerfile .
 
