--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -24,7 +24,7 @@ IMAGES=''
 # auto-release.yml
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
-RELEASE_SCHEDULE='20 0 * * 1-6'
+RELEASE_SCHEDULE='20 * * * 1-6'
 BEAUTY_NAME='Duplicati'
 # apostrophe needs be replaced with '\x27'
 RELEASE_VERSION_COMMAND='$(curl -sL "https://api.github.com/repos/duplicati/duplicati/releases" | jq -r \x27first(.[] | select(.tag_name | contains("beta"))) | .tag_name\x27)'
