--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -4,20 +4,13 @@
 # auto-builder.yml
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
-TAGS=''
-LATEST=''
-
 BUILD_SCHEDULE=''
 BRANCH='main'
-DOCKERHUB_IMAGE='duplicati'
-APP_VERSION_LINK=''
+DOCKERHUB_IMAGE='docker-duplicati'
 PLATFORMS='linux/amd64'
-APP_BRANCH=''
-BASE_OS='alpine'
-ON_RELEASE='true'
-VERSIONING='true'
 BUILD_ARGS=''
 TEST_SEARCH=''
+INVERT_TEST_SEARCH=''
 IMAGES=''
 
 # ~~~~~~~~~~~~~~~~~~~~~~~
