add build schedule

--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -4,7 +4,7 @@
 # auto-builder.yml
 # ~~~~~~~~~~~~~~~~~~~~~~~
 
-BUILD_SCHEDULE=''
+BUILD_SCHEDULE='0 0 * * 0'
 BRANCH='main'
 DOCKERHUB_IMAGE='docker-duplicati'
 BUILD_ARGS=''
