--- a/.github/workflows/auto-builder.yml
+++ b/.github/workflows/auto-builder.yml
@@ -5,6 +5,8 @@ name: Auto Builder CI
 on:
   workflow_dispatch:
   repository_dispatch:
+  schedule:
+    - cron: "0 0 * * 0"
   release:
     types:
       - released
