--- a/.github/vars.conf
+++ b/.github/vars.conf
@@ -6,7 +6,7 @@
 
 BUILD_SCHEDULE=''
 BRANCH='main'
-DOCKERHUB_IMAGE='docker-duplicati'
+GITHUB_REPO='docker-duplicati'
 BUILD_ARGS=''
 TEST_SEARCH=''
 INVERT_TEST_SEARCH=''
