--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -5,7 +5,7 @@ project_name: docker-duplicati
 external_type: custom_json
 release_type: stable
 release_tag: latest
-ls_branch: master
+branch: main
 repo_vars:
   - JSON_URL = 'https://api.github.com/repos/duplicati/duplicati/releases'
   - JSON_PATH = 'first(.[] | select(.tag_name | contains("beta"))) | .tag_name'
