--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -17,14 +17,14 @@ repo_vars:
   - DEV_DOCKERHUB_IMAGE = 'igdev/duplicati'
   - PR_DOCKERHUB_IMAGE = 'igpipepr/duplicati'
   - DIST_IMAGE = 'alpine'
-  - MULTIARCH='false'
-  - CI='true'
-  - CI_WEB='true'
-  - CI_PORT='8200'
-  - CI_SSL='false'
-  - CI_DELAY='30'
-  - CI_DOCKERENV='TZ=US/Pacific|ISCI=true'
-  - CI_AUTH='user:password'
-  - CI_WEBPATH=''
+  - MULTIARCH = 'false'
+  - CI = 'true'
+  - CI_WEB = 'true'
+  - CI_PORT = '8200'
+  - CI_SSL = 'false'
+  - CI_DELAY = '30'
+  - CI_DOCKERENV = 'TZ=Australia/Melbourne'
+  - CI_AUTH = ''
+  - CI_WEBPATH = ''
 sponsor_links:
   - { name: "Duplicati", url: "https://www.duplicati.com/donate/" }
