--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -10,6 +10,7 @@ project_github_repo_url: "https://github.com/imagegenius/docker-{{ project_name 
 # supported architectures
 available_architectures:
   - { arch: "{{ arch_x86_64 }}", tag: "amd64-latest"}
+  - { arch: "{{ arch_arm64 }}", tag: "arm64v8-latest"}
 
 # development version
 development_versions: true
