--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -48,7 +48,7 @@ unraid_category: "Backup: Cloud: Network:Other Productivity: Tools:"
 # application setup block
 app_setup_block_enabled: true
 app_setup_block: |
-  The webui is at `<your ip>:8200` , create backup jobs etc via the webui, for local backups select `/backups` as the destination. For more information see [Duplicati]({{project_url}}).
+  The WebUI can be found at `http://your-ip:8200`.
 
 # changelog
 changelogs:
