--- a/jenkins-vars.yml
+++ b/jenkins-vars.yml
@@ -13,9 +13,6 @@ repo_vars:
   - IG_USER = 'imagegenius'
   - IG_REPO = 'docker-duplicati'
   - CONTAINER_NAME = 'duplicati'
-  - DOCKERHUB_IMAGE = 'imagegenius/duplicati'
-  - DEV_DOCKERHUB_IMAGE = 'igdev/duplicati'
-  - PR_DOCKERHUB_IMAGE = 'igpipepr/duplicati'
   - DIST_IMAGE = 'alpine'
   - MULTIARCH = 'true'
   - CI = 'true'
@@ -23,7 +20,7 @@ repo_vars:
   - CI_PORT = '8200'
   - CI_SSL = 'false'
   - CI_DELAY = '30'
-  - CI_DOCKERENV = 'TZ=Australia/Melbourne'
+  - CI_DOCKERENV = ''
   - CI_AUTH = ''
   - CI_WEBPATH = ''
 sponsor_links:
