--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -54,5 +54,6 @@ app_setup_block: |
 
 # changelog
 changelogs:
-  - { date: "01.26.23:", desc: "rearrange init files." }
+  - { date: "21.03.23:", desc: "Add service checks" }
+  - { date: "26.01.23:", desc: "rearrange init files." }
   - { date: "01.03.23:", desc: "Initial release." }
