--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -13,9 +13,7 @@ available_architectures:
   - { arch: "{{ arch_arm64 }}", tag: "arm64v8-latest"}
 
 # development version
-development_versions: true
-development_versions_items:
-  - { tag: "latest", desc: "Latest beta release of Duplicati with an Alpine base." }
+development_versions: false
 
 # container parameters
 common_param_env_vars_enabled: true
