--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -9,8 +9,8 @@ project_github_repo_url: "https://github.com/imagegenius/docker-{{ project_name 
 
 # supported architectures
 available_architectures:
-  - { arch: "{{ arch_x86_64 }}", tag: "amd64-latest"}
-  - { arch: "{{ arch_arm64 }}", tag: "arm64v8-latest"}
+  - { arch: "{{ arch_x86_64 }}", tag: "amd64-latest" }
+  - { arch: "{{ arch_arm64 }}", tag: "arm64v8-latest" }
 
 # development version
 development_versions: false
@@ -27,9 +27,7 @@ param_volumes:
 param_usage_include_ports: true
 param_ports:
   - { external_port: "8200", internal_port: "8200", port_desc: "WebUI Port" }
-param_usage_include_env: true
-param_env_vars:
-  - { env_var: "TZ", env_value: "Australia/Melbourne", desc: "Specify a timezone to use, eg. Australia/Melbourne"}
+param_usage_include_env: false
 
 # optional container parameters
 opt_param_usage_include_env: true
