rebase to alpine 3.19

--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -50,6 +50,7 @@ app_setup_block: |
 
 # changelog
 changelogs:
+  - { date: "24.04.24:", desc: "rebase to alpine 3.19" }
   - { date: "21.03.23:", desc: "Add service checks" }
   - { date: "26.01.23:", desc: "rearrange init files." }
   - { date: "01.03.23:", desc: "Initial release." }
