--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -7,6 +7,10 @@ project_logo: "https://github.com/linuxserver/docker-templates/raw/master/linuxs
 project_blurb: "Duplicati is a backup client that securely stores encrypted, incremental, compressed remote backups of local files on cloud storage services and remote file servers."
 project_github_repo_url: "https://github.com/imagegenius/docker-{{ project_name }}"
 
+project_deprecation_status: true
+project_deprecation_message: |
+  No longer use this image, alternative images exist.
+
 # supported architectures
 available_architectures:
   - { arch: "{{ arch_x86_64 }}", tag: "amd64-latest" }
